# interactive-actions

./: Cargo.toml  README.md
interactive-actions/: Cargo.toml
interactive-actions/examples/: interaction.rs
interactive-actions/src/: data.rs  lib.rs
interactive-actions/src/snapshots/: interactive_actions__data__tests__foo.snap  interactive_actions__tests__interaction-2.snap  interactive_actions__tests__interaction.snap  interactive_actions__tests__run_script-2.snap  interactive_actions__tests__run_script.snap
xtask/src/: main.rs
