[package]
name = "interactive-actions"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = "1"
serde_derive = "1"
requestty = "0.4.0"
requestty-ui = "0.4.0"
anyhow = "1"
run_script = "0.9.0"

[dev-dependencies]
serde_yaml = "^0.9.4"
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
