[package]
edition = "2021"
version = "0.1.0"
name = "interactive-actions"
description = "Run actions and interactions defined declaratively"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/interactive-actions/"
repository = "https://github.com/jondot/interactive-actions"
categories = ["command-line-interface", "development-tools"]
keywords = ["cli", "prompt", "script"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
serde = "1"
serde_derive = "1"
requestty = "0.4.0"
requestty-ui = "0.4.0"
anyhow = "1"
run_script = "0.9.0"

[dev-dependencies]
serde_yaml = "^0.9.4"
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
